--- a/package.json
+++ b/package.json
@@ -21,9 +21,26 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@ladle/react": "^5.0.2",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.27.0",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.7",
+    "@types/cookie": "^0.6.0",
+    "@types/debug": "^4.1.12",
+    "@types/estree": "^1.0.7",
+    "@types/estree-jsx": "^1.0.5",
+    "@types/hast": "^3.0.4",
+    "@types/json-schema": "^7.0.15",
     "@types/lodash": "^4.17.16",
+    "@types/mdast": "^4.0.4",
+    "@types/mdx": "^2.0.13",
+    "@types/ms": "^2.1.0",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/statuses": "^2.0.5",
+    "@types/tough-cookie": "^4.0.5",
+    "@types/unist": "^3.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
