--- a/package.json
+++ b/package.json
@@ -1,53 +1,49 @@
 {
   "name": "flex-cms",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "description": "A flexible editable CMS content component for React",
+  "main": "./build/index.cjs.js",
+  "module": "./build/index.es.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "build",
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./build/index.es.js",
+      "require": "./build/index.cjs.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc --build tsconfig.build.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "firebase": "^11.6.0",
-    "lodash": "^4.17.21",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.0",
-    "reactjs-tiptap-editor": "^0.2.27",
-    "styled-components": "^6.1.17"
+  "peerDependencies": {
+    "firebase": "^11.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
     "@ladle/react": "^5.0.2",
-    "@types/babel__core": "^7.20.5",
-    "@types/babel__generator": "^7.27.0",
-    "@types/babel__template": "^7.4.4",
-    "@types/babel__traverse": "^7.20.7",
-    "@types/cookie": "^0.6.0",
-    "@types/debug": "^4.1.12",
-    "@types/estree": "^1.0.7",
-    "@types/estree-jsx": "^1.0.5",
-    "@types/hast": "^3.0.4",
-    "@types/json-schema": "^7.0.15",
     "@types/lodash": "^4.17.16",
-    "@types/mdast": "^4.0.4",
-    "@types/mdx": "^2.0.13",
-    "@types/ms": "^2.1.0",
     "@types/node": "^22.14.1",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/statuses": "^2.0.5",
-    "@types/tough-cookie": "^4.0.5",
-    "@types/unist": "^3.0.3",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
+    "firebase": "^11.6.0",
+    "lodash": "^4.17.21",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.0",
+    "reactjs-tiptap-editor": "^0.2.29",
+    "styled-components": "^6.1.17",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0"
   }
 }
