--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "dependencies": {
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0"
   }
 }
