--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "dev": "vite",
     "build": "tsc --build tsconfig.build.json && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "publish": "npm run build && npm version patch && npm publish"
+    "preview": "vite preview"
   },
   "peerDependencies": {
     "firebase": "^11.0.0",
