--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "dev": "vite",
     "build": "tsc --build tsconfig.build.json && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "node ./postinstall.js"
   },
   "peerDependencies": {
     "firebase": "^11.0.0",
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@ladle/react": "^5.0.2",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
@@ -41,14 +41,15 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
-    "reactjs-tiptap-editor": "^0.2.29",
     "styled-components": "^6.1.17",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
     "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^6.1.0",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "fs-extra": "^11.3.0"
   }
 }
