--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "peerDependencies": {
     "firebase": "^11.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@tinymce/tinymce-react": "^6.1.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.16",
@@ -46,12 +45,12 @@
     "styled-components": "^6.1.17",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "vite-plugin-css-injected-by-js": "^3.5.2",
-    "@tinymce/tinymce-react": "^6.1.0"
+    "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "dependencies": {
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "fs-extra": "^11.3.0"
+    "fs-extra": "^11.3.0",
+    "@tinymce/tinymce-react": "^6.1.0"
   }
 }
