--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "types": "./dist/index.d.ts",
   "files": [
     "build",
-    "dist"
+    "dist",
+    "postinstall.mjs"
   ],
   "exports": {
     ".": {
