--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "vite-plugin-css-injected-by-js": "^3.5.2"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^6.1.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "fs-extra": "^11.3.0",
-    "@tinymce/tinymce-react": "^6.1.0"
+    "find-up": "^7.0.0",
+    "fs-extra": "^11.3.0"
   }
 }
